# adventorust

./: .gitignore  .gitmodules  README.md
2015/day1/: Cargo.toml
2015/day2/: Cargo.toml  README.md
2015/day4/: Cargo.toml
2015/day5/: Cargo.toml  README.md
2015/day6/: Cargo.toml  lights-mini.txt  lights-nano.txt
2015/day7/: Cargo.toml  input_sample.txt
2016/day2/: Cargo.toml
2017/day1/: Cargo.toml
2017/day2_with_errors/: Cargo.toml
2017/day5/: Cargo.toml
2018/: .gitignore
2018/day1/: Cargo.toml
2018/day2/: Cargo.toml
2018/day3/: Cargo.toml  README.md  claims.txt
2018/day7/: Cargo.toml  input_sample.txt
2019/day1/: Cargo.toml  input.txt
2019/day16/: 16.html  Cargo.toml
2019/day2/: Cargo.toml
2019/day4/: Cargo.toml
aoc2017-day5/: Cargo.toml
aoc2017-day5/tests/: works.rs
base/src/: main.rs
misc/async-intro/: Cargo.toml
misc/catch-unwind/: Cargo.toml
misc/cbindgen-play/: .gitignore  Cargo.toml  Makefile  README.md  foo.c  myrust.h
misc/export/: share.rs
misc/ffi/: Cargo.toml  build.rs
misc/logging-tutorial/tokio-client/: Cargo.toml
misc/logging-tutorial/tokio-client/src/: main.rs
misc/logging-tutorial/tokio-server/: Cargo.toml
misc/logging-tutorial/tokio-server/src/: main.rs
misc/macros/: Cargo.toml
misc/match_exp/: Cargo.toml
misc/perm/: Cargo.toml
misc/phantom/: Cargo.toml
misc/prahc/: Cargo.toml
misc/prahc/src/: lib.rs
misc/prahc/tests/: smoke.rs
misc/rwlock/: Cargo.toml
misc/serde/: Cargo.toml  config.toml
misc/share/: Cargo.toml
misc/sieve/: Cargo.toml
misc/simple-executor/: Cargo.toml  (+1 more)
(+59 files in other folders)
