[package]
authors = ["Fastly"]
description = "Procedural macro example"
edition = "2018"
name = "prahc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "1.0.54", features = ["full"]}