[package]
name = "tokio"
version = "0.1.0"
authors = ["Caslyn Tonelli <ccole@fastly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
tracing = "0.1.17"
tracing-subscriber = "0.2.9"
